[cloning,microfluidics_design] random_bases without a seed now returns a random sequence instead of a fixed sequence, which was a bug.

--- a/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
+++ b/paulssonlab/src/paulssonlab/microfluidics_design/Basilisk.ipynb
@@ -76,7 +76,19 @@
     "fov_dims = {}\n",
     "for camera, (pixel_size, fov_dim) in camera_dims.items():\n",
     "    for mag in mags:\n",
-    "        fov_dims[f\"{camera} {mag}x\"] = np.floor(fov_dim * pixel_size / mag).astype(np.int32)"
+    "        fov_dims[f\"{camera} {mag}x\"] = fov_dim * pixel_size / mag\n",
+    "fov_dims[\"isim 60x\"] = np.array([3200, 3200]) * 56 / 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "fov_dims"
    ]
   },
   {
@@ -136,7 +148,8 @@
     "chip_dims0 = np.array([33e3, 18e3])\n",
     "# chip_dims0 = np.array([23e3, 13e3])\n",
     "# chip_dims = np.array([38e3, 19e3])\n",
-    "chip_dims = np.array([40e3, 19e3])"
+    "chip_dims = np.array([40e3, 19e3])\n",
+    "#chip_dims = np.array([33e3, 18e3])"
    ]
   },
   {
@@ -174,8 +187,8 @@
     "    design_func=microfluidics_design.snake,\n",
     "    dims=chip_dims,\n",
     "    trench_length=35,\n",
-    "    feeding_channel_width=35,\n",
-    "    trench_gap=15,\n",
+    "    feeding_channel_width=40,#35,\n",
+    "    trench_gap=20,#15,\n",
     "    # trench_width=1.4,\n",
     "    trench_spacing=2.1,\n",
     "    trench_margin=0,\n",
@@ -246,8 +259,8 @@
     "chips = [microfluidics_design.chip(name, **p) for p, name in zip(params, chip_names)]\n",
     "# calculate FOV info and overlay FOVs on chip cells\n",
     "fov_grids_df = {}\n",
-    "draw_fov_grids = True\n",
-    "center_margins = False\n",
+    "draw_fov_grids = False\n",
+    "center_margins = True\n",
     "rotate = False\n",
     "top_shift = -1\n",
     "for chip_name, chip in zip(chip_names, chips):\n",
@@ -366,7 +379,7 @@
    },
    "outputs": [],
    "source": [
-    "fov_grids_df.loc[pd.IndexSlice[:, [\"iris15 20x\", \"iris9 20x\"]], :].round(2)"
+    "fov_grids_df.loc[pd.IndexSlice[\"Basilisk S4 LS3 FC40 L35 W1.4 TS2.1 TG20\", [\"iris15 20x\", \"iris9 20x\", \"isim 60x\"],0,:], :].round(2)"
    ]
   },
   {
@@ -374,279 +387,6 @@
    "metadata": {},
    "source": [
     "# Fluids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# FOVs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "metadata.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#chip_name = \"Basilisk S4 LS3 FC30 L35 W1.4 TS2.1 TG15\"\n",
-    "chip_name = \"Basilisk S4 LS3 FC35 L35 W1.4 TS2.1 TG15\"\n",
-    "fov_name = \"iris15 20x\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "trench_md = metadata[chip_name][\"trench_info\"][0]\n",
-    "trench_md"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# region_heights = [35, 30, 35, 15]\n",
-    "# region_heights = [35, 40, 35, 20]\n",
-    "# region_heights = [35, 40, 35, 20, 20, 20]\n",
-    "region_heights = [35, 90, 35, 20]\n",
-    "#region_heights = [30, 50, 20, 40]\n",
-    "#region_heights = trench_md[\"region_heights\"]\n",
-    "total_height = sum(region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "packings = fov.get_fov_packings(fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "graph = fov._get_fov_graph(packings)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import networkx as nx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "nx.draw(graph, with_labels=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "list(nx.simple_cycles(graph))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "packings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "min(np.int64(20), np.int64(20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov_grids = fov.get_fov_grids_y(\n",
-    "    fov_dims[fov_name][1],\n",
-    "    region_heights,\n",
-    "    center_margins=True,\n",
-    "    padding=1,\n",
-    ")\n",
-    "fov_grids"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[1], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[2], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[0], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot_offsets(fov_grids[3], fov_dims[fov_name][1], region_heights, num=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "fov.fov_plot([35, 190, 400], fov_dims[fov_name][1], region_heights)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "total_height"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "region_heights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "y = np.linspace(0,total_height,10)\n",
-    "y0 = 100\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "(y + y0) % total_height - y0"
    ]
   },
   {
