[cloning,shenker/cloning] Implemented re_digest_part to find digested parts with specific overhangs. Raises error if no unique part is found. Not yet used by registry/command system.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230420 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230420 NAO strains ingest.ipynb
@@ -11,6 +11,7 @@
     "import toml\n",
     "import pygsheets\n",
     "import requests\n",
+    "from cytoolz import partial\n",
     "import Bio.Restriction as Restriction\n",
     "from Bio.Seq import Seq\n",
     "from Bio.SeqRecord import SeqRecord"
@@ -37,6 +38,7 @@
     "import paulssonlab.cloning.workflow as workflow\n",
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
+    "import paulssonlab.cloning.design as design\n",
     "import paulssonlab.api.geneious as geneious"
    ]
   },
@@ -97,7 +99,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Ingest missing parts"
    ]
@@ -290,6 +295,167 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s = reg.get(\"pLIB304\")[\"_seq\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "s2 = sequence.DsSeqRecord((design.type2s_with_spacer(Restriction.BsaI, 4) + \"aaac\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"ttta\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"ggaa\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"ttcc\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"taat\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"ggag\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"cttt\"\n",
+    "      + design.type2s_with_spacer(Restriction.BsaI, 4) + \"aaag\"), circular=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "frags[0].downstream_strand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "[(0, 'ttta'), (1, 'ggaa'), (2, 'aaag'), (3, 'taat'), (4, 'ggag'), (5, 'gaag'), (6, 'gaag'), (7, 'aaac')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "workflow.re_digest_part(s2.reverse_complement(), Restriction.BsaI, (\"ggaa\", \"aaag\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "len(_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "len(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "_.overhang_seqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "frags = enzyme.re_digest(s2, Restriction.BsaI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "frags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from itertools import cycle, islice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "frags[0].upstream_overhang_seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "next(a for a in range(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +505,7 @@
     "nao_sheets = gc.open_by_key(\"1nuEeeEwU4Rj4HFjwCWKi6P9sapH2-mPDf4XSDQBiptk\")\n",
     "tus_sheet = nao_sheets.worksheet(value=0)\n",
     "strains_sheet = nao_sheets.worksheet(value=2)\n",
-    "tus = tus_sheet.get_as_df()\n",
+    "tus = tus_sheet.get_as_df().set_index(\"tLIB number\")\n",
     "strains = strains_sheet.get_as_df()"
    ]
   },
@@ -397,7 +563,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _get_part_name(reg, parts_sheet, well_to_plasmid, name_corrections, name):\n",
+    "#@cache\n",
+    "def _resolve_nao_part(reg, parts_sheet, well_to_plasmid, name_corrections, name):\n",
     "    # LIB number: LIB262\n",
     "    if name.startswith(\"LIB\"):\n",
     "        strain = reg.get(name)\n",
@@ -437,12 +604,32 @@
     "    # part\n",
     "    return name\n",
     "\n",
-    "\n",
-    "def get_part_name(reg, parts_sheet, well_to_plasmid, name_corrections, name):\n",
+    "#@cache\n",
+    "def _parse_nao_part(reg, parts_sheet, well_to_plasmid, name_corrections, name):\n",
     "    names = [re.sub(r\"\\s*\\([^)]*\\)\\s*\", \"\", n) for n in re.split(r\"\\s*\\+\\s*\", name)]\n",
-    "    return names\n",
+    "    return [_resolve_nao_part(reg, parts_sheet, well_to_plasmid, name_corrections, n) for n in names]\n",
     "\n",
+    "parse_nao_part = partial(_parse_nao_part, reg, flib_fragments_df, well_to_plasmid, name_corrections)\n",
     "\n",
+    "def nao_tu_to_command(row):\n",
+    "    uns_a = str(row[\"UNS_A\"]).replace(\"*\", \"_r\")\n",
+    "    uns_e = str(row[\"UNS_E\"]).replace(\"*\", \"_r\")\n",
+    "    promoter = parse_nao_part(row[\"Promoter (pLIB number or 3G part ID) \"])\n",
+    "    rbs = parse_nao_part(row[\"Ribosome binding site (pLIB number or 3G part ID) \"])\n",
+    "    cds = parse_nao_part(row[\"Coding region (pLIB number or 3G part ID) \"])\n",
+    "    term = parse_nao_part(row[\"Terminator (pLIB number or 3G part ID) \"])\n",
+    "    command = f\"@GG(UNS{uns_a}_A, {promoter}, {rbs}, {cds}, {term}, UNS{uns_e}_E)\"\n",
+    "    return command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "test_names = [\n",
     "    \"199\",\n",
     "    \"DT3\",\n",
@@ -468,8 +655,30 @@
     "    print(\n",
     "        name,\n",
     "        \"->\",\n",
-    "        get_part_name(reg, flib_fragments_df, well_to_plasmid, name_corrections, name),\n",
+    "        parse_nao_part(name),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "reg.get(\"mVenus_nocut\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "nao_tu_to_command(tus.loc[\"tLIB447\"])"
    ]
   },
   {
@@ -512,18 +721,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "tus.loc[\"tLIB447\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "tu_to_command = {}\n",
     "for _, row in tus.iterrows():\n",
-    "    uns_a = str(row[\"UNS_A\"]).replace(\"*\", \"_r\")\n",
-    "    uns_e = str(row[\"UNS_E\"]).replace(\"*\", \"_r\")\n",
-    "    promoter = name_map[str(row[\"Promoter (pLIB number or 3G part ID) \"])]\n",
-    "    rbs = name_map[str(row[\"Ribosome binding site (pLIB number or 3G part ID) \"])]\n",
-    "    cds = name_map[str(row[\"Coding region (pLIB number or 3G part ID) \"])]\n",
-    "    term = name_map[str(row[\"Terminator (pLIB number or 3G part ID) \"])]\n",
-    "    command = f\"@GG(UNS{uns_a}_A, {promoter}, {rbs}, {cds}, {term}, UNS{uns_e}_E)\"\n",
+    "    \n",
     "    tu_to_command[int(row[\"tLIB number\"].replace(\"tLIB\", \"\"))] = command"
    ]
   },
@@ -695,6 +909,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Barcode GFA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\" + \".join([\"barcode_bit{num}_on | barcode_bit{num}_on\".format(num=num) for num in range(1,31)])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -718,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
