[shenker/cloning,cloning] Fixed handling of non-circular sequences in re_digest_part.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230421 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230421 NAO strains ingest.ipynb
@@ -351,7 +351,7 @@
    },
    "outputs": [],
    "source": [
-    "[(0, 'ttta'), (1, 'ggaa'), (2, 'aaag'), (3, 'taat'), (4, 'ggag'), (5, 'gaag'), (6, 'gaag'), (7, 'aaac')]"
+    "str(s2.seq)"
    ]
   },
   {
@@ -362,7 +362,7 @@
    },
    "outputs": [],
    "source": [
-    "workflow.re_digest_part(s2.reverse_complement(), Restriction.BsaI, (\"ggaa\", \"aaag\"))"
+    "workflow.re_digest_part(sequence.DsSeqRecord(s2.reverse_complement(), circular=False), Restriction.BsaI, (\"ttcc\", \"ttta\"))"
    ]
   },
   {
