[cloning,shenker/cloning] re_digest_part handles blunt ends.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230421 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230421 NAO strains ingest.ipynb
@@ -362,7 +362,52 @@
    },
    "outputs": [],
    "source": [
+    "u1 = \"CATTACTCGCATCCATTCTCAGGCTGTCTCGTCTCGTCTCGGAGAGAGACCGG\"\n",
+    "u3 = \"GGGGTCTCTGCTTGCACTGAAGGTCCTCAATCGCACTGGAAACATCAAGGTCG\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "workflow.re_digest_part(sequence.DsSeqRecord(s2.reverse_complement(), circular=False), Restriction.BsaI, (\"ttcc\", \"ttta\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(enzyme.re_digest(u3, Restriction.BsaI)[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "workflow.re_digest_part(u1, Restriction.BsaI, (\"\", \"ggag\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "workflow.re_digest_part(u3, Restriction.BsaI, (\"gctt\", \"\"))"
    ]
   },
   {
