--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation for Daniel.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation for Daniel.ipynb
@@ -246,12 +246,217 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ary = np.random.choice((0,0,1,2),size=(40,4000,4000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dary = dask.array.array(ary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dask.base import tokenize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dary.rechunk((-1,\"auto\",\"auto\"),balance=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mosaic.composite_first(dary).compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m = (ary!=0).argmax(axis=0)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ary.take(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.consta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ary.take(np.full((10,10), 0, dtype=np.int16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "z = np.zeros((100,3840, 2160, 3))#.nbytes / 1e6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ary[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "np.take_along_axis(ary, m[np.newaxis,...], axis=0)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mosaic.composite_mean(ary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = (ary != 0).argmax(axis=0)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ary[m[np.newaxis,:,:]].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
     "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
     "# scale = np.geomspace(80, 0.1, 900)\n",
     "# scale = np.geomspace(0.5, 0.1, 60)\n",
-    "scale = [20]\n",
+    "# scale = [20]\n",
+    "# scale = [0.3]\n",
     "# scale = it.repeat(1)\n",
     "# scale = [0.333]\n",
     "#scale = it.repeat(0.05)\n",
@@ -279,6 +484,7 @@
     "    scaling_funcs=scaling_funcs,\n",
     "    offset=offset,\n",
     "    # rotation=np.deg2rad(-0.65),\n",
+    "    rotation=np.deg2rad(0.2),\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
     "    #overlay_only=True,\n",
@@ -293,9 +499,9 @@
     "        font=font,\n",
     "    ),\n",
     "    # positions_func=positions_func,\n",
-    "    # output_dims=(3840, 2160),\n",
+    "    output_dims=(3840, 2160),\n",
     "    #output_dims=(1024, 1024),\n",
-    "    output_dims=(1024, 512),\n",
+    "    #output_dims=(1024, 512),\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -308,6 +514,39 @@
    "source": [
     "%%time\n",
     "a = dask.compute(animation_delayed, scheduler=\"sync\")[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(a[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "display_image(a[0])"
    ]
   },
   {
