[image_analysis,shenker/image_analysis] As used to render good drafts of the powers-of-ten animation.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation for Daniel.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation for Daniel.ipynb
@@ -178,7 +178,7 @@
    },
    "outputs": [],
    "source": [
-    "cluster.scale(20)"
+    "cluster.scale(40)"
    ]
   },
   {
@@ -246,210 +246,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ary = np.random.choice((0,0,1,2),size=(40,4000,4000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dary = dask.array.array(ary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dask.base import tokenize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "dary.rechunk((-1,\"auto\",\"auto\"),balance=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "mosaic.composite_first(dary).compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "m = (ary!=0).argmax(axis=0)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ary.take(m)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.consta"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ary.take(np.full((10,10), 0, dtype=np.int16))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "z = np.zeros((100,3840, 2160, 3))#.nbytes / 1e6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ary[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "np.take_along_axis(ary, m[np.newaxis,...], axis=0)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mosaic.composite_mean(ary)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.nan"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.average"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m = (ary != 0).argmax(axis=0)\n",
-    "m"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ary[m[np.newaxis,:,:]].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "num_t = nd2.sizes[\"t\"]\n",
     "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
@@ -473,8 +269,12 @@
     "# timepoints = [0,60,num_t-1]\n",
     "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
     "#timepoints = [0, 30, 60, 90, 120]\n",
-    "timepoints = it.repeat(0)\n",
-    "offset = [-20, 840]  # [0,0]#np.array([604, 354])\n",
+    "#scale = [80]\n",
+    "scale = np.geomspace(80, 0.03, 2*num_t)\n",
+    "#timepoints = it.repeat(0)\n",
+    "#timepoints = it.cycle(range(num_t))\n",
+    "timepoints = np.repeat(np.arange(num_t),2)\n",
+    "offset = [-20, 820]  # [0,0]#np.array([604, 354])\n",
     "# offset = [4000, -7000]\n",
     "# offset = [0,0]\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
@@ -563,28 +363,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +387,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
+    "#video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
+    "video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/\")\n",
     "video_dir.mkdir(exist_ok=True)"
    ]
   },
@@ -623,7 +402,7 @@
     "mosaic.export_video(\n",
     "    # a,\n",
     "    animation_future,\n",
-    "    video_dir / \"230423zoomtest_linescaling3.mp4\",\n",
+    "    video_dir / \"230425zoom_slow.mp4\",\n",
     "    fps=30,\n",
     ")"
    ]
