[shenker/image_analysis,image_analysis] As used on 230426 to render Daniel 221227 experiment mosaic. Implemented dark/flat correction in mosaic.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230426 Mosaic animation for Daniel.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230426 Mosaic animation for Daniel.ipynb
@@ -23,6 +23,7 @@
     "import h5py\n",
     "import matplotlib.pyplot as plt\n",
     "import nd2reader\n",
+    "import skimage\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from cytoolz import partial\n",
@@ -53,7 +54,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "# %load_ext pyinstrument"
+    "%load_ext pyinstrument"
    ]
   },
   {
@@ -81,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220704/220704rbs_library_fish.nd2\"\n",
-    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\""
+    "nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/221227daniel/Experiment.nd2\"\n",
+    "# nd2_filename = \"/home/jqs1/scratch/jqs1/microscopy/220718/RBS_DEG_library_20x.nd2\""
    ]
   },
   {
@@ -100,19 +101,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "default_channels = (\"YFP-DUAL\", \"RFP-Penta\")\n",
-    "# default_channels = (\"YFP-DUAL\", \"RFP-PENTA\")\n",
+    "default_channels = (\"mCherry\",)\n",
     "channel_to_color = {\n",
-    "    \"BF\": \"#ffffff\",\n",
-    "    \"RFP-PENTA\": \"#C500BB\",  # \"#FF5AF6\",\n",
-    "    \"RFP-Penta\": \"#C500BB\",\n",
-    "    # \"RFP-Penta\": \"#e22400\",\n",
-    "    # \"YFP-DUAL\": \"#13FF00\",\n",
-    "    \"YFP-DUAL\": \"#FAFF00\",\n",
-    "    # \"GFP\": \"#76ba40\",\n",
-    "    \"Cy5\": \"#e292fe\",\n",
-    "    # \"Cy7\": \"#FF0000\"\n",
-    "    # \"BFP\": \"#3a87fd\",\n",
+    "    \"mCherry\": \"#e22400\",\n",
     "}"
    ]
   },
@@ -142,23 +133,14 @@
    "source": [
     "cluster = SLURMCluster(\n",
     "    queue=\"short\",\n",
-    "    walltime=\"02:00:00\",\n",
-    "    memory=\"4GB\",\n",
+    "    walltime=\"03:00:00\",\n",
+    "    memory=\"16GB\",\n",
     "    local_directory=\"/tmp\",\n",
     "    log_directory=\"/home/jqs1/log\",\n",
-    "    cores=1,\n",
-    "    processes=1,\n",
+    "    cores=2,\n",
+    "    processes=2,\n",
     ")\n",
     "client = Client(cluster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cluster.adapt(maximum=30)"
    ]
   },
   {
@@ -178,7 +160,16 @@
    },
    "outputs": [],
    "source": [
-    "cluster.scale(10)"
+    "cluster.scale(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cluster.adapt(maximum=10)"
    ]
   },
   {
@@ -215,13 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# scaling_funcs = mosaic.get_scaling_funcs(extrema)\n",
-    "scaling_funcs = mosaic.get_scaling_funcs(\n",
-    "    {\"YFP-DUAL\": (262, 8000), \"RFP-Penta\": (278, 8000)}\n",
-    ")\n",
-    "# scaling_funcs = mosaic.get_scaling_funcs(\n",
-    "#     {\"YFP-DUAL\": (300, 2000), \"RFP-PENTA\": (300, 2000)}\n",
-    "# )"
+    "scaling_funcs = mosaic.get_scaling_funcs({\"mCherry\": (300, 3000)})"
    ]
   },
   {
@@ -243,57 +228,69 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dark = skimage.io.imread(\n",
+    "    \"/home/jqs1/scratch/jqs1/microscopy/221227daniel/40x_DarkImage.tiff\"\n",
+    ")\n",
+    "flats = {\n",
+    "    \"mCherry\": skimage.io.imread(\n",
+    "        \"/home/jqs1/scratch/jqs1/microscopy/221227daniel/mCherry_20x_Ph2_flatfield.tiff\"\n",
+    "    )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%time\n",
+    "distributed = True\n",
+    "if distributed:\n",
+    "    dark_delayed = client.scatter(dark, broadcast=True)\n",
+    "    flats_delayed = {k: client.scatter(v, broadcast=True) for k, v in flats.items()}\n",
+    "else:\n",
+    "    dark_delayed = dark\n",
+    "    flats_delayed = flats\n",
     "num_t = nd2.sizes[\"t\"]\n",
-    "# scale = [80,40,20,10,5,1]#it.repeat(80)\n",
-    "# scale = np.geomspace(80, 0.1, 900)\n",
-    "# scale = np.geomspace(0.5, 0.1, 60)\n",
-    "#scale = [40]\n",
-    "# scale = it.repeat(1)\n",
-    "# scale = [0.333]\n",
-    "#scale = it.repeat(0.05)\n",
-    "# scale = it.repeat(0.1)\n",
-    "# scale = it.repeat(0.2)\n",
-    "# scale = it.repeat(0.4)\n",
-    "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
-    "scale = np.geomspace(40, 0.05, 120*2)\n",
-    "# timepoints = range(0, 119, 30)\n",
-    "# timepoints = range(0, 110, 10)#[20,40,60]\n",
-    "# timepoints = [60]  # it.repeat(60)  # [20]  # [20,40,60,80]\n",
-    "# timepoints = range(num_t)\n",
-    "# timepoints = [num_t-1]\n",
-    "# timepoints = [0,60,num_t-1]\n",
-    "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
-    "#timepoints = [0, 30, 60, 90, 120]\n",
-    "timepoints = it.repeat(60)\n",
-    "offset = [2000, 1000]  # [0,0]#np.array([604, 354])\n",
-    "# offset = [4000, -7000]\n",
+    "#scale = [20]\n",
+    "scale = np.geomspace(80, 0.05, 2 * num_t)\n",
+    "#scale = [80,40,20,0.2,0.1,0.05,0.03]\n",
+    "# timepoints = it.repeat(0)\n",
+    "# timepoints = it.cycle(range(num_t))\n",
+    "timepoints = np.repeat(np.arange(num_t), 2)\n",
+    "offset = (77, 502)\n",
     "animation_delayed = mosaic.mosaic_animate_scale(\n",
     "    nd2_filename,\n",
     "    scale,\n",
     "    timepoints=timepoints,\n",
     "    scaling_funcs=scaling_funcs,\n",
     "    offset=offset,\n",
-    "    # rotation=np.deg2rad(-0.65),\n",
+    "    rotation=np.deg2rad(0.2), # TODO: necessary?\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
-    "    overlay_only=True,\n",
+    "    # overlay_only=True,\n",
     "    overlay_func=partial(\n",
     "        mosaic.square_overlay,\n",
-    "        min_scale=80,\n",
+    "        min_scale=40,\n",
     "        min_n=0,\n",
-    "        min_width=0.5,\n",
-    "        max_scale=0.1,\n",
-    "        max_n=5,\n",
+    "        min_width=0.25,\n",
+    "        max_scale=0.05,\n",
+    "        max_n=7,\n",
     "        max_width=0.9,\n",
     "        font=font,\n",
     "    ),\n",
+    "    dark=dark_delayed,\n",
+    "    flats=flats_delayed,\n",
     "    # positions_func=positions_func,\n",
     "    output_dims=(3840, 2160),\n",
     "    # output_dims=(1024, 1024),\n",
+    "    # output_dims=(1024, 512),\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -311,10 +308,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "display_image(a[0])"
+    "display_image(a[3])"
    ]
   },
   {
@@ -341,45 +340,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
+    "# video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
+    "video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/221227daniel/mosaics/\")\n",
     "video_dir.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "del animation_future"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "z = animation_future[1].result()"
    ]
   },
   {
@@ -390,11 +356,22 @@
    "source": [
     "%%time\n",
     "mosaic.export_video(\n",
-    "    a,\n",
-    "    # animation_future,\n",
-    "    video_dir / \"230423zoomtest.mp4\",\n",
+    "    # a,\n",
+    "    animation_future,\n",
+    "    video_dir / \"230426zoom_v2.mp4\",\n",
     "    fps=30,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "client.restart();"
    ]
   },
   {
@@ -404,7 +381,7 @@
    "outputs": [],
    "source": [
     "Video(\n",
-    "    video_dir / \"230423zoomtest.mp4\",\n",
+    "    video_dir / \"230426zoom_v2_overlay.mp4\",\n",
     "    embed=True,\n",
     ")"
    ]
@@ -549,13 +526,15 @@
    },
    "outputs": [],
    "source": [
+    "# %%pyinstrument\n",
     "# output_dims=(3840, 2160)\n",
-    "output_dims=(1024, 1024)\n",
-    "frame = np.zeros((*output_dims, 3), dtype=np.float32)\n",
+    "# output_dims=(384, 216)\n",
+    "output_dims = (1024, 1024)\n",
+    "frame = np.zeros((*output_dims[::-1], 3), dtype=np.float32) + 0.5\n",
     "img = mosaic.square_overlay(\n",
     "    frame,\n",
     "    0,\n",
-    "    40,\n",
+    "    20,\n",
     "    min_scale=80,\n",
     "    min_n=0,\n",
     "    min_width=0.5,\n",
@@ -587,13 +566,16 @@
    },
    "outputs": [],
    "source": [
-    "#b=cv2.resize(img, img.shape[:-1], fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA)\n",
-    "#transform = SimilarityTransform(scale=0.2)\n",
-    "transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
-    "b = cv2.warpAffine(img, transform.params[:2, :],\n",
-    "                    img.shape[:-1],\n",
-    "                    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
-    "                    flags=(cv2.INTER_LANCZOS4))"
+    "# b=cv2.resize(img, img.shape[:-1], fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA)\n",
+    "# transform = SimilarityTransform(scale=0.2)\n",
+    "transform = mosaic.scale_around_center(0.2, np.array(output_dims) / 2)\n",
+    "b = cv2.warpAffine(\n",
+    "    img,\n",
+    "    transform.params[:2, :],\n",
+    "    img.shape[:-1],\n",
+    "    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
+    "    flags=(cv2.INTER_LANCZOS4),\n",
+    ")"
    ]
   },
   {
@@ -626,12 +608,16 @@
    },
    "outputs": [],
    "source": [
-    "#transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
+    "# transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
     "# b = cv2.warpAffine(img, transform.params[:2, :],\n",
     "#                     img.shape[:-1],\n",
     "#                     # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
     "#                     flags=(cv2.INTER_LANCZOS4))\n",
-    "c = cv2.resize(img, np.ceil(np.array(img.shape[:-1])*0.2).astype(np.int32), interpolation=cv2.INTER_AREA)"
+    "c = cv2.resize(\n",
+    "    img,\n",
+    "    np.ceil(np.array(img.shape[:-1]) * 0.2).astype(np.int32),\n",
+    "    interpolation=cv2.INTER_AREA,\n",
+    ")"
    ]
   },
   {
@@ -651,11 +637,16 @@
    },
    "outputs": [],
    "source": [
-    "transform = SimilarityTransform(translation=np.array(output_dims)/2) #mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
-    "d = cv2.warpAffine(c, transform.params[:2, :],\n",
-    "                    img.shape[:-1],\n",
-    "                    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
-    "                    flags=(cv2.INTER_LANCZOS4))"
+    "transform = SimilarityTransform(\n",
+    "    translation=np.array(output_dims) / 2\n",
+    ")  # mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
+    "d = cv2.warpAffine(\n",
+    "    c,\n",
+    "    transform.params[:2, :],\n",
+    "    img.shape[:-1],\n",
+    "    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
+    "    flags=(cv2.INTER_LANCZOS4),\n",
+    ")"
    ]
   },
   {
