[shenker/cloning,cloning/commands] Cleaned up command parsing. Renamed arguments to args in grammar. Added Name subclass of str to tag name strings. normalize_ast updated in accordance with these changes and now returns vanilla dictionaries. Command dest removed from unparse_expr.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/230503 NAO strains ingest.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/230503 NAO strains ingest.ipynb
@@ -39,6 +39,8 @@
     "import paulssonlab.cloning.sequence as sequence\n",
     "import paulssonlab.cloning.enzyme as enzyme\n",
     "import paulssonlab.cloning.design as design\n",
+    "import paulssonlab.cloning.commands.semantics as cmd_semantics\n",
+    "import paulssonlab.cloning.commands.parser as cmd_parser\n",
     "import paulssonlab.api.geneious as geneious"
    ]
   },
@@ -100,7 +102,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -264,6 +265,50 @@
    "outputs": [],
    "source": [
     "plib_maps.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Command test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#cmd = \"@Digest(mKate2_nocut, BsaI)\"\n",
+    "#cmd = \"mKate2_nocut/BsaI\"\n",
+    "cmd = \"@FooCommand(\\\"baz\\\", @MyCommand(foo, \\\"bar\\\", 1, 3.14), \\\"biz()@Command()\\\", MyName/BsaI/AarI, MyName<oLIB100>/AarI, Foo=Bar)\"\n",
+    "p = cmd_parser.command_parser.parse(cmd)\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cmd_parser.normalize_ast(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cmd_parser.unparse_expr(p)"
    ]
   },
   {
