--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation 220704_rbsdeg.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230425 Mosaic animation 220704_rbsdeg.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0",
    "metadata": {
     "tags": []
    },
@@ -12,6 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,6 +73,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -78,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,6 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,6 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,6 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,6 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "14",
    "metadata": {
     "tags": []
    },
@@ -183,6 +198,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -193,6 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,6 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,6 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,12 +276,12 @@
     "# scale = [0.3]\n",
     "# scale = it.repeat(1)\n",
     "# scale = [0.333]\n",
-    "#scale = it.repeat(0.05)\n",
+    "# scale = it.repeat(0.05)\n",
     "# scale = it.repeat(0.1)\n",
     "# scale = it.repeat(0.2)\n",
     "# scale = it.repeat(0.4)\n",
     "# scale = np.geomspace(20, 0.05, num_t*3)# + np.linspace(0, 0, 0) #it.repeat(0.3)  # [0.3, 0.3, 0.3, 0.3]\n",
-    "#scale = np.geomspace(80, 0.05, 120*2)\n",
+    "# scale = np.geomspace(80, 0.05, 120*2)\n",
     "# timepoints = range(0, 119, 30)\n",
     "# timepoints = range(0, 110, 10)#[20,40,60]\n",
     "# timepoints = [60]  # it.repeat(60)  # [20]  # [20,40,60,80]\n",
@@ -268,12 +289,12 @@
     "# timepoints = [num_t-1]\n",
     "# timepoints = [0,60,num_t-1]\n",
     "# timepoints = it.chain(range(num_t), range(num_t), range(num_t)) #[20]#[20, 40, 60]\n",
-    "#timepoints = [0, 30, 60, 90, 120]\n",
-    "#scale = [80]\n",
-    "scale = np.geomspace(80, 0.03, 2*num_t)\n",
-    "#timepoints = it.repeat(0)\n",
-    "#timepoints = it.cycle(range(num_t))\n",
-    "timepoints = np.repeat(np.arange(num_t),2)\n",
+    "# timepoints = [0, 30, 60, 90, 120]\n",
+    "# scale = [80]\n",
+    "scale = np.geomspace(80, 0.03, 2 * num_t)\n",
+    "# timepoints = it.repeat(0)\n",
+    "# timepoints = it.cycle(range(num_t))\n",
+    "timepoints = np.repeat(np.arange(num_t), 2)\n",
     "offset = [-20, 820]  # [0,0]#np.array([604, 354])\n",
     "# offset = [4000, -7000]\n",
     "# offset = [0,0]\n",
@@ -287,7 +308,7 @@
     "    rotation=np.deg2rad(0.2),\n",
     "    channels=default_channels,\n",
     "    channel_to_color=channel_to_color,\n",
-    "    #overlay_only=True,\n",
+    "    # overlay_only=True,\n",
     "    overlay_func=partial(\n",
     "        mosaic.square_overlay,\n",
     "        min_scale=40,\n",
@@ -300,8 +321,8 @@
     "    ),\n",
     "    # positions_func=positions_func,\n",
     "    output_dims=(3840, 2160),\n",
-    "    #output_dims=(1024, 1024),\n",
-    "    #output_dims=(1024, 512),\n",
+    "    # output_dims=(1024, 1024),\n",
+    "    # output_dims=(1024, 512),\n",
     "    delayed=True,\n",
     ")"
    ]
@@ -309,6 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,6 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22",
    "metadata": {
     "tags": []
    },
@@ -330,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23",
    "metadata": {
     "tags": []
    },
@@ -341,6 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "24",
    "metadata": {
     "tags": []
    },
@@ -352,6 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "25",
    "metadata": {
     "tags": []
    },
@@ -363,6 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,6 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,10 +412,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
+    "# video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220718/mosaics/\")\n",
     "video_dir = Path(\"/home/jqs1/scratch/jqs1/microscopy/220704/mosaics/\")\n",
     "video_dir.mkdir(exist_ok=True)"
    ]
@@ -395,6 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,6 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "30",
    "metadata": {
     "tags": []
    },
@@ -421,6 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,6 +464,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32",
    "metadata": {},
    "source": [
     "# Grid debugging"
@@ -440,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,6 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,6 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,6 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,6 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,6 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,6 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,6 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,6 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,6 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,6 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,6 +602,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "45",
    "metadata": {},
    "source": [
     "# Overlay"
@@ -565,15 +611,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "46",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#%%pyinstrument\n",
-    "#output_dims=(3840, 2160)\n",
-    "#output_dims=(384, 216)\n",
-    "output_dims=(1024, 1024)\n",
+    "# %%pyinstrument\n",
+    "# output_dims=(3840, 2160)\n",
+    "# output_dims=(384, 216)\n",
+    "output_dims = (1024, 1024)\n",
     "frame = np.zeros((*output_dims[::-1], 3), dtype=np.float32) + 0.5\n",
     "img = mosaic.square_overlay(\n",
     "    frame,\n",
@@ -593,6 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "47",
    "metadata": {
     "tags": []
    },
@@ -605,23 +653,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#b=cv2.resize(img, img.shape[:-1], fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA)\n",
-    "#transform = SimilarityTransform(scale=0.2)\n",
-    "transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
-    "b = cv2.warpAffine(img, transform.params[:2, :],\n",
-    "                    img.shape[:-1],\n",
-    "                    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
-    "                    flags=(cv2.INTER_LANCZOS4))"
+    "# b=cv2.resize(img, img.shape[:-1], fx=0.2, fy=0.2, interpolation=cv2.INTER_AREA)\n",
+    "# transform = SimilarityTransform(scale=0.2)\n",
+    "transform = mosaic.scale_around_center(0.2, np.array(output_dims) / 2)\n",
+    "b = cv2.warpAffine(\n",
+    "    img,\n",
+    "    transform.params[:2, :],\n",
+    "    img.shape[:-1],\n",
+    "    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
+    "    flags=(cv2.INTER_LANCZOS4),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "49",
    "metadata": {
     "tags": []
    },
@@ -633,6 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "50",
    "metadata": {
     "tags": []
    },
@@ -644,22 +698,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "51",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "#transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
+    "# transform = mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
     "# b = cv2.warpAffine(img, transform.params[:2, :],\n",
     "#                     img.shape[:-1],\n",
     "#                     # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
     "#                     flags=(cv2.INTER_LANCZOS4))\n",
-    "c = cv2.resize(img, np.ceil(np.array(img.shape[:-1])*0.2).astype(np.int32), interpolation=cv2.INTER_AREA)"
+    "c = cv2.resize(\n",
+    "    img,\n",
+    "    np.ceil(np.array(img.shape[:-1]) * 0.2).astype(np.int32),\n",
+    "    interpolation=cv2.INTER_AREA,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,21 +729,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "transform = SimilarityTransform(translation=np.array(output_dims)/2) #mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
-    "d = cv2.warpAffine(c, transform.params[:2, :],\n",
-    "                    img.shape[:-1],\n",
-    "                    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
-    "                    flags=(cv2.INTER_LANCZOS4))"
+    "transform = SimilarityTransform(\n",
+    "    translation=np.array(output_dims) / 2\n",
+    ")  # mosaic.scale_around_center(0.2, np.array(output_dims)/2)\n",
+    "d = cv2.warpAffine(\n",
+    "    c,\n",
+    "    transform.params[:2, :],\n",
+    "    img.shape[:-1],\n",
+    "    # flags=cv2.INTER_AREA + cv2.WARP_INVERSE_MAP,\n",
+    "    flags=(cv2.INTER_LANCZOS4),\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "54",
    "metadata": {
     "tags": []
    },
@@ -691,13 +758,6 @@
    "source": [
     "display_image(d)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
